--- a/application.ui
+++ b/application.ui
@@ -120,7 +120,7 @@ QLabel[STYLE_TITLE=&quot;true&quot;] {
      </rect>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="pageMain">
      <widget class="QLabel" name="labelMainTitle">
@@ -250,6 +250,53 @@ Jakub WYCIŚLIK</string>
       </property>
       <property name="text">
        <string>START</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="btnStartServerReturn">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>430</y>
+        <width>200</width>
+        <height>50</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>RETURN</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="pageJoinGame">
+     <widget class="QLabel" name="labelJoinGameTitle">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>0</y>
+        <width>780</width>
+        <height>60</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Join game</string>
+      </property>
+      <property name="BORDER_BOTTOM" stdset="0">
+       <bool>true</bool>
+      </property>
+      <property name="STYLE_TITLE" stdset="0">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="btnJoinGameReturn">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>430</y>
+        <width>200</width>
+        <height>50</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>RETURN</string>
       </property>
      </widget>
     </widget>
