--- a/application.ui
+++ b/application.ui
@@ -38,6 +38,14 @@
 
 /* Type selectors */
 
+QGraphicsView {
+	background-color: #666666;
+
+	border-color: #FF9900;
+	border-style: solid;
+	border-width: 3px;
+}
+
 QLabel {
 	font-size: 20px;
 
@@ -124,7 +132,7 @@ QWidget[TRANSPARENT=&quot;true&quot;] {
      </rect>
     </property>
     <property name="currentIndex">
-     <number>4</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="pageMain">
      <widget class="QLabel" name="labelMainTitle">
@@ -548,6 +556,40 @@ Jakub WYCIŚLIK</string>
       </property>
       <property name="text">
        <string>RANDOMIZE</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="pageBuildRandom">
+     <widget class="QLabel" name="labelBuildRandomTitle">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>0</y>
+        <width>780</width>
+        <height>60</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Board randomizer</string>
+      </property>
+      <property name="BORDER_BOTTOM" stdset="0">
+       <bool>true</bool>
+      </property>
+      <property name="STYLE_TITLE" stdset="0">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="btnBuildRandomReturn">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>430</y>
+        <width>200</width>
+        <height>50</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>RETURN</string>
       </property>
      </widget>
     </widget>
