Added images for two-block-long ship

--- a/resources.qrc
+++ b/resources.qrc
@@ -3,5 +3,7 @@
         <file>resources/images/water.png</file>
         <file>resources/images/H1.png</file>
         <file>resources/images/V1.png</file>
+        <file>resources/images/H2.png</file>
+        <file>resources/images/V2.png</file>
     </qresource>
 </RCC>
