Added the largest ship's images

--- a/resources.qrc
+++ b/resources.qrc
@@ -7,5 +7,7 @@
         <file>resources/images/V2.png</file>
         <file>resources/images/H3.png</file>
         <file>resources/images/V3.png</file>
+        <file>resources/images/H4.png</file>
+        <file>resources/images/V4.png</file>
     </qresource>
 </RCC>
