Added ghost mode in GraphicBoard and manual board build page

--- a/application.ui
+++ b/application.ui
@@ -142,7 +142,7 @@ QWidget[TRANSPARENT=&quot;true&quot;] {
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>6</number>
     </property>
     <widget class="QWidget" name="pageMain">
      <widget class="QLabel" name="labelMainTitle">
@@ -635,6 +635,72 @@ Jakub WYCIŚLIK</string>
       </property>
       <property name="text">
        <string>RE-RANDOMIZE</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="pageBuildManual">
+     <widget class="QLabel" name="labelBuildManualTitle">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>0</y>
+        <width>780</width>
+        <height>60</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Board manual builder</string>
+      </property>
+      <property name="BORDER_BOTTOM" stdset="0">
+       <bool>true</bool>
+      </property>
+      <property name="STYLE_TITLE" stdset="0">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="btnBuildManualReturn">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>430</y>
+        <width>200</width>
+        <height>50</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>RETURN</string>
+      </property>
+     </widget>
+     <widget class="GraphicBoard" name="boardBuildManual">
+      <property name="geometry">
+       <rect>
+        <x>230</x>
+        <y>70</y>
+        <width>340</width>
+        <height>340</height>
+       </rect>
+      </property>
+      <property name="mouseTracking">
+       <bool>true</bool>
+      </property>
+      <property name="verticalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOff</enum>
+      </property>
+      <property name="horizontalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOff</enum>
+      </property>
+     </widget>
+     <widget class="QLabel" name="labelBuildManualRotate">
+      <property name="geometry">
+       <rect>
+        <x>230</x>
+        <y>430</y>
+        <width>340</width>
+        <height>50</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Press R to rotate ships</string>
       </property>
      </widget>
     </widget>
